--- a/game.css
+++ b/game.css
@@ -1,66 +1,78 @@
-body{
+body {
   color: #fff;
 }
 
-.choice-container{
+#game {
+  display: flex;
+  width: 100%;
+  border-radius: 4px;
+  font-size: 2.2rem;
+  min-width: 100%;
+}
+
+.choice-container {
   display: flex;
   margin-bottom: 0.6rem;
   width: 100%;
-  border-radius: 4px;
-  background: rgb(18,93,255);
-  font-size: 2.2rem;
-  min-width: 70rem;
+  background: rgb(18, 93, 255);
 }
-.choice-container:hover{
+
+.choice-container:hover {
   cursor: pointer;
-  box-shadow: 0 0.3rem 1.2rem 0 rgba(6,103,247,0.5);
+  box-shadow: 0 0.3rem 1.2rem 0 rgba(6, 103, 247, 0.5);
   transform: scale(1.02);
   transition: transform 100ms;
 }
-.choice-prefix{
+
+.choice-prefix {
   padding: 1.2rem 2.5rem;
   color: white;
 }
-.choice-text{
+
+.choice-text {
   padding: 1.2rem;
   width: 100%;
 }
+
 .correct {
   background: lightgreen;
 }
+
 .incorrect {
   background: red;
 }
 
-#display{
+#display {
   display: flex;
   justify-content: space-between;
 }
-.display-prefix{
+
+.display-prefix {
   text-align: center;
   font-size: 1.6rem;
 }
-.display-main-text{
+
+.display-main-text {
   text-align: center;
 }
-#progressBar{
+
+#progressBar {
   width: 16rem;
   height: 2.4rem;
-  border: 0.16rem solid rgb(11,233,36);
+  border: 0.16rem solid rgb(11, 233, 36);
   margin-top: 1.6rem;
   border-radius: 50px;
-  overflow:hidden;
+  overflow: hidden;
 }
 
-@media screen and (max-width: 768px) {
-  .choice-container{
-    min-width: 32rem;
-    
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  #game {
+    min-width: 34rem;
   }
 }
-@media screen and (max-width: 480px) {
-  .choice-container{
-    min-width: 20rem;
-    
+
+@media screen and (max-width: 767px) {
+  #game {
+    min-width: 100%;
   }
 }
